# absplit

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
absplit/: __init__.py  data.py  ga.py  log.py  param.py  tutorials.py
tests/: test_data.py  test_ga.py
